# agent-canvas

./: .env.sample  .gitignore  .npmrc  AGENTS.md  CHANGELOG.md  CRITICAL_CARL_REVIEW.md  DEVELOPMENT.md  GETTING_STARTED.md  README.md  README.windows.md  SELF_HOSTING.md  docker-compose.dev.yml  electron-builder.config.mjs  eslint.config.js  package-lock.json  package.json  playwright.config.ts  playwright.live.config.ts  playwright.live.onboarding.config.ts  playwright.mock-llm-docker.config.ts  playwright.mock-llm.config.ts  pr-review-summary-2026-06-04.md  proposal-agent-discovery.html  release-please-config.json  test-utils.tsx  vite.config.ts  vitest.setup.ts  walkthrough.html
.checks/: result.json
.github/: pull_request_template.md
.pr/: command-center-approaches.html  final-agent-mcp-live-result.json  final-live-qa-result.json  merged-main-mcp-retest.json  qa-results.json  qa-results.md  qa-scheduled-created-api.json  qa-scheduled-results.json  qa-scheduled-run-observed.json  qa-ui-only-results.json
__tests__/: build-websocket-url.test.ts  conversation-local-storage.test.ts  conversation-provider.test.tsx  package-library.test.ts  root.test.tsx  vite-config.test.ts
artifacts/: cool-grey-migration.md
config/: defaults.json
docker/: Dockerfile  entrypoint.sh
docker-cloud-backend/: README.md  requirements.txt  server.py
docs/: ACP_AGENTS.md  DEVELOPMENT.md  ExtensionsSystemAgentExecutionPlan.md  ExtensionsSystemPoCPlan.md  ExtensionsSystemRFC.md  (+10 more)
services/work-runtime/: pyproject.toml
services/work-runtime/openhands_work_runtime/: __init__.py  app.py
(+1253 files in other folders)
