[project]
name = "openhands-work-runtime"
version = "0.1.0"
description = "Thin Work Runtime sidecar for agent-canvas Work mode"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
]

[project.scripts]
work-runtime = "openhands_work_runtime.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openhands_work_runtime"]
